# ricochet-refresh

doc/: profile-v4.md  protocol-v3.md  settings-v3.md
src/libtego_rs/: Cargo.toml
src/libtego_rs/crates/: CMakeLists.txt
src/libtego_rs/crates/rico-profile/: CMakeLists.txt  Cargo.toml  README.md
src/libtego_rs/crates/rico-profile/src/: lib.rs
src/libtego_rs/crates/rico-profile/src/v3/: profile.rs
src/libtego_rs/crates/rico-profile/src/v4/: db.rs  error.rs  mod.rs  profile.rs
src/libtego_rs/crates/rico-profile/tests/v3/: deserialize.rs
src/libtego_rs/crates/rico-profile/tests/v4/: profile.rs
src/libtego_rs/crates/rico-protocol/: CMakeLists.txt  Cargo.toml
src/libtego_rs/crates/rico-protocol/src/: lib.rs
src/libtego_rs/crates/rico-protocol/src/v4/: mod.rs  payload.rs
src/libtego_rs/crates/rico-settings/: CMakeLists.txt  Cargo.toml
src/libtego_rs/crates/rico-settings/src/: common.rs  lib.rs
src/libtego_rs/crates/rico-settings/src/v3/: settings.rs
src/libtego_rs/crates/rico-settings/src/v4/: settings.rs
src/libtego_rs/crates/rico-settings/tests/v3/: deserialize.rs
src/libtego_rs/crates/rico-settings/tests/v4/: round_trip.rs
src/libtego_rs/crates/tego-rs/: Cargo.toml
tools/: sign-tag.sh
