[package]
name = "rico-profile"
authors = ["morgan@blueprintforfreespeech.net"]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "A library for reading+writing Ricochet-Refresh profile files"
repository = "https://github.com/blueprint-freespeech/ricochet-refresh"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = { version = "1.0", optional = true}
tor-interface = {version = "0.6.4", features = ["legacy-tor-provider"]}

[dev-dependencies]
anyhow = "1.0"

[features]
v3-profile = ["serde", "serde_json"]
