[package]
name = "rico-protocol"
authors = ["morgan@blueprintforfreespeech.net"]
version = "0.1.1"
edition = "2021"
license = "BSD-3-Clause"
description = "A sans-io implementation of the Ricochet-Refresh chat protocol"
repository = "https://github.com/blueprint-freespeech/ricochet-refresh"

[build-dependencies]
protobuf-codegen = "3.0"

[dependencies]
hmac = "0.12"
protobuf = "3.0"
rand = "0.9"
rand_core = "0.9"
rusqlite = {version = "0", optional = true }
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
time = "0"
tor-interface = "0.6.7"
unicode-general-category = "1.0"

[dev-dependencies]
anyhow = "1.0"

[features]
test-features = []
rusqlite-traits = ["rusqlite"]
