[package]
name = "rico-settings"
authors = ["morgan@blueprintforfreespeech.net"]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "A library for reading+writing Ricochet-Refresh settings files"
repository = "https://github.com/blueprint-freespeech/ricochet-refresh"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tor-interface = { version = "0.6.7", features = ["legacy-tor-provider"] }

[dev-dependencies]
anyhow = "1.0"
