[package]
name = "tego-rs"
authors = ["morgan@blueprintforfreespeech.net"]
version = "0.1.0"
rust-version = "1.79"
edition = "2021"
license = "BSD-3-Clause"
description = "Rust re-implementation of the libtego library"
repository = "https://github.com/blueprint-freespeech/ricochet-refresh"

[build-dependencies]
cbindgen = { version = "0.28" }

[dependencies]
anyhow = "1.0"
time = {version = "0.3", features = ["formatting", "macros"], optional = true}
data-encoding = "2.0"
rico-protocol = { path = "../rico-protocol" }
tor-interface = {version = "0.6.4", features = ["legacy-tor-provider"]}
which = "7.0"

[lib]
name = "tego_rs"
crate-type = ["staticlib"]

[features]
logging = ["time"]
